# curso-python3

./: README.md  aula02.py  aula03.py  aula04.py  aula05.py  aula06.py  aula09.py  aula1.py  aula10.py  aula11.py  aula12.py  aula15.py  aula17.py  aula19.py  aula2.py  aula20.py  aula22.py  aula23.py  aula27.py  aula28.py  aula29.py  aula32.py  aula33.py  aula34.py  aula36.py  aula37.py  aula39.py  aula40.py  aula41.py  aula42.py  aula44.py  aula45.py  aula47.py  aula48.py  aula50.py  ex01.py  ex03.py  ex04.py  ex05.py  ex08.py  (+8 more)
desafios/: calculadora.py
exercicios/: ex02.py  ex06.py  ex07.py  ex10.py  ex11.py  ex12.py
modulo_01/: aula03.py  aula04.py  aula07.py  aula08.py  aula10.py  aula12.py  aula13.py  aula14.py  aula15.py  aula16.py  aula18.py  aula21.py  aula24.py
modulo_02/: aula25.py  aula26.py  aula31.py  aula35.py  aula42.py  aula43.py  aula44.py  aula46.py  aula49.py  aula51.py  aula52.py  aula53.py  aula54.py
modulo_2/: aula30.py  aula38.py  aula53.py
