[tool.poetry]
name = "curso-python3"
version = "0.0.1"
description = "Curso Python3"
authors = ["Walber Vaz da Silva <wvs.walber@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "curso_python3"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
